Adequando com o modelo do Rafael