@@ -1,52 +1,92 @@
 package com.senai.ControleDeAcessoSpring.aplication.service;
 
 import com.senai.ControleDeAcessoSpring.aplication.dto.SubTurmaDto;
+import com.senai.ControleDeAcessoSpring.domain.entity.turma.Semestre;
 import com.senai.ControleDeAcessoSpring.domain.entity.turma.SubTurma;
+import com.senai.ControleDeAcessoSpring.domain.entity.turma.Turma;
+import com.senai.ControleDeAcessoSpring.domain.entity.turma.horario.HorarioPadrao;
 import com.senai.ControleDeAcessoSpring.domain.repository.SubTurmaRepository;
+import com.senai.ControleDeAcessoSpring.domain.repository.TurmaRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class SubTurmaService {
+
     @Autowired
     private SubTurmaRepository subTurmaRepository;
 
-    public void cadastrarSubTurma(SubTurmaDto dto) {
-        SubTurma novaSubTurma = new SubTurma();
+    @Autowired
+    private TurmaRepository turmaRepository;
 
-        novaSubTurma.setNome(dto.nome());
-        novaSubTurma.setStatus(dto.status());
+    @Autowired
+    private HorarioService horarioService;
 
-        subTurmaRepository.save(novaSubTurma);
-    }
+    @Transactional
+    public void criarSubTurma(Long turmaId) {
+        Turma turma = turmaRepository.findById(turmaId)
+                .orElseThrow(() -> new RuntimeException("Turma não encontrada"));
 
-    public Boolean deletarSubTurma(Long id) {
-        return subTurmaRepository.findById(id).map(st -> {
-            st.setStatus(false);
-            return true;
-        }).orElse(false);
-    }
+        SubTurma subTurma = new SubTurma();
+        subTurma.setNome("Turma "+subTurma.getTurma().getSubTurmas().size());
+        subTurma.setTurma(turma);
 
-    public Boolean atualizarSubTurma(Long id, SubTurmaDto novaSubTurma) {
-        return subTurmaRepository.findById(id).map(st -> {
-            st.setNome(novaSubTurma.nome());
-            st.setStatus(novaSubTurma.status());
-            return true;
-        }).orElse(false);
+        turma.getSubTurmas().add(subTurma);
+
+        Semestre semestre = new Semestre();
+        subTurma.getSemestres().add(semestre);
+
+        semestre.setNumero(subTurma.getSemestres().size());
+        semestre.setNomeDaTurma(
+                subTurma.getSemestres().size() +
+                        subTurma.getTurma().getSiglaDaTurma() +
+                        subTurma.getTurma().getPeriodo().getSigla()
+        );
+        semestre.setSubTurma(subTurma);
+
+        HorarioPadrao horarioPadrao = horarioService.criarHorarioPadraoVazio(semestre);
+        semestre.setHorarioPadrao(horarioPadrao);
+
+        semestre.setHorariosSemanais(new ArrayList<>());
+        subTurma.setAlunos(new ArrayList<>());
+
+        subTurmaRepository.save(subTurma);
     }
 
     public List<SubTurmaDto> listar() {
-        return subTurmaRepository.findAll().stream().map(st -> new SubTurmaDto(
-                st.getNome(),
-                st.getStatus()
-        )).toList();
+        return subTurmaRepository.findAll().stream()
+                .map(SubTurmaDto::toDto)
+                .collect(Collectors.toList());
     }
 
-    public SubTurmaDto listarPorId(Long id) {
-        SubTurma subTurma = subTurmaRepository.findById(id).get();
-        SubTurmaDto dto = new SubTurmaDto(subTurma.getNome(), subTurma.getStatus());
-        return dto;
+    public Optional<SubTurmaDto> buscarPorId(Long id) {
+        return subTurmaRepository.findById(id).map(SubTurmaDto::toDto);
+    }
+
+    @Transactional
+    public boolean atualizar(Long id, SubTurmaDto dto) {
+        Optional<SubTurma> optional = subTurmaRepository.findById(id);
+        if (optional.isEmpty()) return false;
+
+        SubTurma subTurma = optional.get();
+        subTurma.setNome(dto.nome());
+
+        subTurmaRepository.save(subTurma);
+        return true;
+    }
+
+    @Transactional
+    public boolean deletar(Long id) {
+        if (!subTurmaRepository.existsById(id)) {
+            return false;
+        }
+        subTurmaRepository.deleteById(id);
+        return true;
     }
 }
